hphp/test/zend/bad/ext/ldap/tests/ldap_err2str_error.php
<?php
// Too few args
var_dump(ldap_err2str());

// Too many args
var_dump(ldap_err2str(1, "Additional data"));

var_dump(ldap_err2str("weird"));
?>
===DONE===